Added Features, README file Updated

--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 
     </div>
 
+    <!-- pop up for game details -->
+     <div id="popup-container" class="popup hidden">
+        <div class="popup-content">
+            <span id="close-popup" class="close">x</span>
+            <div id="popup-body"></div>
+        </div>
+     </div>
+
     <script type="module" src="index.js"></script>
   </body>
 </html>
